Linked Applications
Loading…
Dashboards
Projects
Issues
Boards
Create
Help
Jira Software help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Profile
My Jira Home
Dashboard
Boards
Issue Navigator
Log Out
Thrift
THRIFT-1999
warning on gcc 4.7 while compiling BoostMutex.cpp
Comment
Agile Board
More
Export
Voters
Stop watching
Watchers
Link
Clone
Update Comment Author
Replace String in Comment
Update Comment Visibility
Delete Comments
XML
Word
Printable
JSON
Details
Type:
Bug
Status:
Closed
Priority:
Minor
Resolution:
Fixed
Affects Version/s:
0.9
Fix Version/s:
0.9.2
Component/s:
C++ - Library
Labels:
None
Patch Info:
Patch Available
Description
"unused arguments" warning. suppressed by (void) x; in patch
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Manage Attachments
Attachments
warning_gcc_BoostMutex.patch
05/Jun/13 15:30
0.8 kB
Konrad Grochowski
THRIFT-1999_new_suppression.patch
18/Jun/13 13:12
1 kB
Konrad Grochowski
Activity
Comment
trigger
comment-preview_link
fieldId
comment
fieldName
Comment
rendererType
atlassian-wiki-renderer
issueKey
THRIFT-1999
Preview comment
$i18n.getText('security.level.explanation', $currentSelection)
All Users
jira-users
Viewable by All Users
Cancel
People
Assignee:
Ben Craig
Reporter:
Konrad Grochowski
Votes:
0
Vote for this issue
Watchers:
3
Stop watching this issue
Dates
Created:
05/Jun/13 15:30
Updated:
10/Jul/14 13:42
Resolved:
10/Jul/14 13:42
Agile
View on Board
Issue deployment