THRIFT-1999: warning on gcc 4.7 while compiling BoostMutex.cpp Client: cpp Patch: Konrad Grochowski